--- a/View/MainW.ui
+++ b/View/MainW.ui
@@ -117,6 +117,41 @@
       <bool>true</bool>
      </property>
     </widget>
+    <widget class="QLabel" name="label_3">
+     <property name="geometry">
+      <rect>
+       <x>226</x>
+       <y>270</y>
+       <width>521</width>
+       <height>56</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>Roboto Medium</family>
+       <pointsize>40</pointsize>
+       <weight>7</weight>
+       <italic>false</italic>
+       <bold>false</bold>
+      </font>
+     </property>
+     <property name="autoFillBackground">
+      <bool>false</bool>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: transparent;
+color: rgb(255, 255, 255);
+font: 57 40pt &quot;Roboto Medium&quot;;
+
+</string>
+     </property>
+     <property name="text">
+      <string>Bienvenido &quot;Usuario&quot;!</string>
+     </property>
+     <property name="scaledContents">
+      <bool>false</bool>
+     </property>
+    </widget>
    </widget>
   </widget>
  </widget>
