--- a/View/MainW.ui
+++ b/View/MainW.ui
@@ -120,8 +120,8 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>226</x>
-       <y>270</y>
+       <x>140</x>
+       <y>220</y>
        <width>521</width>
        <height>56</height>
       </rect>
@@ -150,6 +150,20 @@ font: 57 40pt &quot;Roboto Medium&quot;;
      </property>
      <property name="scaledContents">
       <bool>false</bool>
+     </property>
+    </widget>
+    <widget class="QLineEdit" name="lineEdit">
+     <property name="geometry">
+      <rect>
+       <x>262</x>
+       <y>300</y>
+       <width>261</width>
+       <height>31</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 12pt &quot;Roboto&quot;;
+background-color: rgb(255, 255, 255);</string>
      </property>
     </widget>
    </widget>
