--- a/View/MainW.ui
+++ b/View/MainW.ui
@@ -122,14 +122,14 @@
       <rect>
        <x>140</x>
        <y>220</y>
-       <width>521</width>
+       <width>520</width>
        <height>56</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>Roboto Medium</family>
-       <pointsize>40</pointsize>
+       <family>Roboto Black</family>
+       <pointsize>38</pointsize>
        <weight>7</weight>
        <italic>false</italic>
        <bold>false</bold>
@@ -141,7 +141,8 @@
      <property name="styleSheet">
       <string notr="true">background-color: transparent;
 color: rgb(255, 255, 255);
-font: 57 40pt &quot;Roboto Medium&quot;;
+font: 57 38pt &quot;Roboto Black&quot;;
+
 
 </string>
      </property>
@@ -152,18 +153,68 @@ font: 57 40pt &quot;Roboto Medium&quot;;
       <bool>false</bool>
      </property>
     </widget>
-    <widget class="QLineEdit" name="lineEdit">
+    <widget class="QLineEdit" name="pass_in">
      <property name="geometry">
       <rect>
        <x>262</x>
-       <y>300</y>
+       <y>320</y>
        <width>261</width>
        <height>31</height>
       </rect>
      </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="styleSheet">
-      <string notr="true">font: 12pt &quot;Roboto&quot;;
-background-color: rgb(255, 255, 255);</string>
+      <string notr="true">font: 12pt &quot;Roboto Light&quot;;
+background-color: rgb(255, 255, 255);
+border-color: rgb(2, 31, 84);
+border-style: solid;
+border-width: 2px;
+border-radius: 6px;</string>
+     </property>
+     <property name="inputMethodHints">
+      <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
+     </property>
+     <property name="inputMask">
+      <string/>
+     </property>
+     <property name="maxLength">
+      <number>20</number>
+     </property>
+     <property name="frame">
+      <bool>true</bool>
+     </property>
+     <property name="echoMode">
+      <enum>QLineEdit::Password</enum>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignCenter</set>
+     </property>
+     <property name="placeholderText">
+      <string>Ingresa tu contraseña</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="btn_ingreso">
+     <property name="geometry">
+      <rect>
+       <x>350</x>
+       <y>390</y>
+       <width>80</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: qlineargradient(spread:pad, x1:0.545, y1:0.528409, x2:0.647, y2:0.193, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(82, 55, 23, 255));
+font: 12pt &quot;Roboto&quot;;
+color: rgb(255, 255, 255);
+border-radius: 3px;</string>
+     </property>
+     <property name="text">
+      <string>Ingresar</string>
      </property>
     </widget>
    </widget>
