--- a/View/Login.ui
+++ b/View/Login.ui
@@ -10,6 +10,12 @@
     <height>600</height>
    </rect>
   </property>
+  <property name="maximumSize">
+   <size>
+    <width>801</width>
+    <height>601</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -24,7 +30,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: qlineargradient(spread:pad, x1:0.0126582, y1:0, x2:0.979747, y2:0.957, stop:0 rgba(67, 62, 104, 255), stop:1 rgba(167, 204, 238, 255));</string>
+     <string notr="true">background-color: qlineargradient(spread:pad, x1:0.465, y1:0.397727, x2:0.863, y2:0.898, stop:0 rgba(34, 39, 45, 255), stop:1 rgba(75, 72, 51, 255));</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::NoFrame</enum>
@@ -209,15 +215,18 @@ border-radius: 6px;</string>
       <rect>
        <x>350</x>
        <y>390</y>
-       <width>80</width>
-       <height>23</height>
+       <width>90</width>
+       <height>25</height>
       </rect>
      </property>
+     <property name="cursor">
+      <cursorShape>PointingHandCursor</cursorShape>
+     </property>
      <property name="styleSheet">
-      <string notr="true">background-color: qlineargradient(spread:pad, x1:0.545, y1:0.528409, x2:0.647, y2:0.193, stop:0 rgba(0, 0, 0, 255), stop:1 rgba(82, 55, 23, 255));
-font: 12pt &quot;Roboto&quot;;
+      <string notr="true">font: 12pt &quot;Roboto&quot;;
 color: rgb(255, 255, 255);
-border-radius: 3px;</string>
+border-radius: 3px;
+background-color: qlineargradient(spread:pad, x1:0.465, y1:0.397727, x2:0.863, y2:0.898, stop:0 rgba(107, 144, 153), stop:1 rgba(29, 104, 110));</string>
      </property>
      <property name="text">
       <string>Ingresar</string>
