--- a/View/Login.ui
+++ b/View/Login.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>599</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -28,6 +28,9 @@
       <width>800</width>
       <height>600</height>
      </rect>
+    </property>
+    <property name="focusPolicy">
+     <enum>Qt::ClickFocus</enum>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color: qlineargradient(spread:pad, x1:0.465, y1:0.397727, x2:0.863, y2:0.898, stop:0 rgba(34, 39, 45, 255), stop:1 rgba(75, 72, 51, 255));</string>
@@ -277,6 +280,12 @@ border-radius: 6px;</string>
       <string>Ingresa tu Nombre</string>
      </property>
     </widget>
+    <zorder>label_2</zorder>
+    <zorder>user_in</zorder>
+    <zorder>label</zorder>
+    <zorder>label_3</zorder>
+    <zorder>pass_in</zorder>
+    <zorder>btn_ingreso</zorder>
    </widget>
   </widget>
  </widget>
