--- a/View/Img.qrc
+++ b/View/Img.qrc
@@ -1,7 +1,7 @@
 <RCC>
   <qresource prefix="newPrefix">
+    <file>icons8-positive-48.png</file>
     <file>bbeta1.png</file>
-    <file>icons8-plus-48.png</file>
     <file>Logo_oficial_vector.png</file>
   </qresource>
 </RCC>
