--- a/View/MainW.ui
+++ b/View/MainW.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>599</height>
    </rect>
   </property>
   <property name="maximumSize">
@@ -17,7 +17,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Form</string>
+   <string>BetaSave</string>
   </property>
   <widget class="QFrame" name="frame_main_w">
    <property name="geometry">
@@ -37,7 +37,7 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QFrame" name="frame_menu">
+   <widget class="QFrame" name="menu_frame">
     <property name="geometry">
      <rect>
       <x>0</x>
@@ -47,7 +47,7 @@
      </rect>
     </property>
     <property name="styleSheet">
-     <string notr="true">background-color: #22272D;</string>
+     <string notr="true">background-color: #17223b;</string>
     </property>
     <property name="frameShape">
      <enum>QFrame::StyledPanel</enum>
@@ -64,7 +64,7 @@
        <height>611</height>
       </rect>
      </property>
-     <layout class="QVBoxLayout" name="verticalLayout_Menu" stretch="0,0,0,0,0,0,0,0">
+     <layout class="QVBoxLayout" name="verticalLayout_Menu" stretch="0,0,0,0,0,0,0,0,0">
       <property name="spacing">
        <number>2</number>
       </property>
@@ -78,7 +78,7 @@
        <number>1</number>
       </property>
       <property name="bottomMargin">
-       <number>200</number>
+       <number>150</number>
       </property>
       <item>
        <widget class="QFrame" name="frame_Saldo">
@@ -95,10 +95,10 @@ border-radius: 6px;</string>
         <widget class="QLabel" name="Label_Saldo">
          <property name="geometry">
           <rect>
-           <x>6</x>
-           <y>20</y>
-           <width>141</width>
-           <height>20</height>
+           <x>5</x>
+           <y>9</y>
+           <width>140</width>
+           <height>40</height>
           </rect>
          </property>
          <property name="styleSheet">
@@ -124,7 +124,7 @@ border-radius: 6px;</string>
           <cursorShape>PointingHandCursor</cursorShape>
          </property>
          <property name="styleSheet">
-          <string notr="true">image: url(:/newPrefix/icons8-plus-48.png);</string>
+          <string notr="true">image: url(:/newPrefix/icons8-positive-48.png);</string>
          </property>
          <property name="text">
           <string/>
@@ -135,7 +135,7 @@ border-radius: 6px;</string>
       <item>
        <widget class="QFrame" name="frame_Deuda">
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(230, 22, 16);
+         <string notr="true">background-color: rgb(255, 103, 104);
 border-radius: 6px;</string>
         </property>
         <property name="frameShape">
@@ -147,8 +147,8 @@ border-radius: 6px;</string>
         <widget class="QLabel" name="Label_Deuda">
          <property name="geometry">
           <rect>
-           <x>6</x>
-           <y>20</y>
+           <x>10</x>
+           <y>18</y>
            <width>181</width>
            <height>20</height>
           </rect>
@@ -218,13 +218,23 @@ font: 87 10pt &quot;Roboto Black&quot;;</string>
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(107, 144, 153);
+         <string notr="true">background-color: #6b778d;
 color: rgb(255, 255, 255);
 font: 57 14pt &quot;Roboto Medium&quot;;
 border-radius: 6px;</string>
         </property>
         <property name="text">
          <string>Inicio</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons8-google-home-48.png</normaloff>icons8-google-home-48.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -249,13 +259,23 @@ border-radius: 6px;</string>
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(107, 144, 153);
+         <string notr="true">background-color: #6b778d;
 color: rgb(255, 255, 255);
 font: 57 14pt &quot;Roboto Medium&quot;;
 border-radius: 6px;</string>
         </property>
         <property name="text">
          <string>Resumen</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons8-spreadsheet-48.png</normaloff>icons8-spreadsheet-48.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -280,13 +300,64 @@ border-radius: 6px;</string>
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(107, 144, 153);
+         <string notr="true">background-color: #6b778d;
 color: rgb(255, 255, 255);
 font: 57 14pt &quot;Roboto Medium&quot;;
 border-radius: 6px;</string>
         </property>
         <property name="text">
          <string>Categorías</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons8-sorting-48.png</normaloff>icons8-sorting-48.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButton_Historial">
+        <property name="enabled">
+         <bool>true</bool>
+        </property>
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>65</height>
+         </size>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">background-color: #6b778d;
+color: rgb(255, 255, 255);
+font: 57 14pt &quot;Roboto Medium&quot;;
+border-radius: 6px;</string>
+        </property>
+        <property name="text">
+         <string>Historial</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons8-statistics-48.png</normaloff>icons8-statistics-48.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -311,13 +382,35 @@ border-radius: 6px;</string>
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(107, 144, 153);
+         <string notr="true">background-color: #6b778d;
 color: rgb(255, 255, 255);
 font: 57 14pt &quot;Roboto Medium&quot;;
 border-radius: 6px;</string>
         </property>
         <property name="text">
          <string>Estadísticas</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons8-doughnut-chart-48.png</normaloff>icons8-doughnut-chart-48.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
+        </property>
+        <property name="checkable">
+         <bool>false</bool>
+        </property>
+        <property name="checked">
+         <bool>false</bool>
+        </property>
+        <property name="autoRepeat">
+         <bool>false</bool>
+        </property>
+        <property name="autoExclusive">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -342,13 +435,23 @@ border-radius: 6px;</string>
          <cursorShape>PointingHandCursor</cursorShape>
         </property>
         <property name="styleSheet">
-         <string notr="true">background-color: rgb(107, 144, 153);
+         <string notr="true">background-color: #6b778d;
 font: 57 14pt &quot;Roboto Medium&quot;;
 color: rgb(255, 255, 255);
 border-radius: 6px;</string>
         </property>
         <property name="text">
          <string>Ayuda</string>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>icons8-help-48.png</normaloff>icons8-help-48.png</iconset>
+        </property>
+        <property name="iconSize">
+         <size>
+          <width>30</width>
+          <height>30</height>
+         </size>
         </property>
        </widget>
       </item>
@@ -640,12 +743,70 @@ border-radius: 6px;</string>
      </property>
     </widget>
    </widget>
-   <zorder>frame_menu</zorder>
-   <zorder>inicio_frame</zorder>
-   <zorder>categorias_frame</zorder>
+   <widget class="QFrame" name="historial_frame">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>0</y>
+      <width>600</width>
+      <height>600</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::StyledPanel</enum>
+    </property>
+    <property name="frameShadow">
+     <enum>QFrame::Raised</enum>
+    </property>
+    <widget class="QLabel" name="label_17">
+     <property name="geometry">
+      <rect>
+       <x>50</x>
+       <y>-30</y>
+       <width>983</width>
+       <height>982</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background: transparent;</string>
+     </property>
+     <property name="text">
+      <string/>
+     </property>
+     <property name="pixmap">
+      <pixmap resource="Img.qrc">:/newPrefix/Logo_oficial_vector.png</pixmap>
+     </property>
+     <property name="scaledContents">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_18">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>40</y>
+       <width>61</width>
+       <height>16</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">font: 87 8pt &quot;Roboto Black&quot;;</string>
+     </property>
+     <property name="text">
+      <string>HISTORIAL</string>
+     </property>
+    </widget>
+   </widget>
+   <zorder>menu_frame</zorder>
    <zorder>resumen_frame</zorder>
+   <zorder>historial_frame</zorder>
    <zorder>estadisticas_frame</zorder>
+   <zorder>categorias_frame</zorder>
    <zorder>ayuda_frame</zorder>
+   <zorder>inicio_frame</zorder>
   </widget>
  </widget>
  <resources>
